--- a/InventoryTracker.WebHost/appsettings.Development.json
+++ b/InventoryTracker.WebHost/appsettings.Development.json
@@ -6,6 +6,6 @@
         }
     },
     "ConnectionStrings": {
-        "ApplicationDbContext": "Host=localhost;Port=5432;Database=InventoryTrackerdb;UserName=postgres;Password=91736143;",
+        "DefaultConnection": "Host=localhost;Port=5432;Database=InventoryTrackerdb;UserName=postgres;Password=91736143;"
     }
 }
